Alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ form {
 	margin-top: 10px;
 }
 
+#side-column {
+	margin-top: 10px;
+}
+
 details {
 	padding: 10px;
 }
